--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -57,3 +57,11 @@ input[type="range"] {
     padding: 1rem;
   }
 }
+
+main {
+  min-height: calc(100vh - 120px);
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding-top: 1rem;
+}
